--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.203",
+  "version": "0.0.205",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -18,6 +18,7 @@
     "@elastic/elasticsearch": "8.1.0",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/bcrypt": "^3.0.1",
+    "@types/busboy": "^1.5.0",
     "@types/convert-units": "^2.3.3",
     "@types/deep-equal": "^1.0.1",
     "@types/diacritics": "^1.3.1",
@@ -28,7 +29,6 @@
     "@types/html-minifier": "^3.5.3",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.5.2",
-    "@types/mailgun-js": "^0.22.11",
     "@types/node": "^13.13.52",
     "@types/node-fetch": "^2.5.10",
     "@types/pg": "^7.14.11",
@@ -52,6 +52,7 @@
     "autosuggest-highlight": "^3.1.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "busboy": "^1.6.0",
     "colors": "^1.4.0",
     "comlink": "^4.3.1",
     "convert-units": "^2.3.4",
@@ -72,7 +73,6 @@
     "json-source-map": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
-    "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.6.0",
