--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.205",
+  "version": "0.0.206",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -48,6 +48,7 @@
     "@types/stripe": "^8.0.417",
     "@types/svgo": "^1.3.5",
     "@types/uuid": "^3.4.9",
+    "address-rfc2822": "^2.1.0",
     "ajv": "^6.12.6",
     "autosuggest-highlight": "^3.1.1",
     "bcrypt": "^5.0.1",
@@ -62,7 +63,7 @@
     "dompurify": "^2.2.9",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "form-data": "^3.0.1",
+    "form-data": "^4.0.0",
     "graphql": "^14.7.0",
     "graphql-fields": "^2.0.3",
     "graphql-upload": "^9.0.0",
