--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.206",
+  "version": "0.0.207",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -46,6 +46,7 @@
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-client": "^1.4.36",
     "@types/stripe": "^8.0.417",
+    "@types/stylis": "^4.0.2",
     "@types/svgo": "^1.3.5",
     "@types/uuid": "^3.4.9",
     "address-rfc2822": "^2.1.0",
@@ -95,6 +96,8 @@
     "socket.io-client": "^2.4.0",
     "source-map-support": "^0.5.19",
     "stripe": "^8.160.0",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "sudo-prompt": "^9.2.1",
     "svgo": "^1.3.2",
     "tarn": "^3.0.1",
