--- a/setup/docker/nginx.conf
+++ b/setup/docker/nginx.conf
@@ -40,10 +40,6 @@ http {
 			proxy_set_header Host $host;
 		}
 
-		location / {
-			proxy_pass http://scalable_servers;
-			proxy_set_header Host $host;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		}
+		WAF;
 	}
 }
