--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.296",
+  "version": "0.0.297",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -111,7 +111,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
-    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/lab": "5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
     "@types/react": "^17.0.38",
