--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "@types/convert-units": "^2.3.3",
     "@types/deep-equal": "^1.0.1",
     "@types/diacritics": "^1.3.1",
-    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.12",
     "@types/html-minifier": "^3.5.3",
-    "@types/jsdom": "^21.1.6",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^13.13.52",
     "@types/node-fetch": "^2.5.10",
@@ -38,7 +36,6 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/read": "0.0.28",
     "@types/redis": "^2.8.30",
-    "@types/slate": "^0.47.11",
     "@types/stylis": "^4.0.2",
     "@types/uuid": "^3.4.9",
     "address-rfc2822": "^2.1.0",
@@ -52,13 +49,11 @@
     "core-js": "^3.15.2",
     "deep-equal": "^1.1.1",
     "diacritics": "^1.3.0",
-    "dompurify": "^3.0.6",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "history": "^4.10.1",
     "html-minifier": "^4.0.0",
     "idb": "^6.1.2",
-    "jsdom": "^23.0.1",
     "json-source-map": "^0.4.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.7.1",
@@ -72,9 +67,6 @@
     "read": "^1.0.7",
     "redis": "^3.1.1",
     "sharp": "^0.33.0",
-    "slate": "^0.90.0",
-    "slate-history": "^0.86.0",
-    "slate-react": "^0.90.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "source-map-support": "^0.5.19",
@@ -99,6 +91,7 @@
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
+    "@onzag/itemize-text-engine": "^0.0.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
