update typescript mess

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitAny": false,
     "rootDir": ".",
     "outDir": "nodejs",
     "esModuleInterop": true,
