--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.309",
+  "version": "0.0.310",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -87,10 +87,10 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
-    "@mui/lab": "^5.0.0-alpha.66",
-    "@mui/material": "^5.3.1",
-    "@mui/styles": "^5.3.0",
-    "@onzag/itemize-text-engine": "^0.0.9",
+    "@mui/lab": "5.0.0-alpha.66",
+    "@mui/material": "5.3.1",
+    "@mui/styles": "5.3.0",
+    "@onzag/itemize-text-engine": "^0.0.10",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
@@ -103,8 +103,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "5.0.0-alpha.66",
-    "@mui/material": "^5.3.1",
-    "@mui/styles": "^5.3.0",
+    "@mui/material": "5.3.1",
+    "@mui/styles": "5.3.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
